; ModuleID = '/home/carl/AnghaBench/linux/sound/usb/extr_mixer.c_uac_mixer_unit_get_channels.c'
source_filename = "/home/carl/AnghaBench/linux/sound/usb/extr_mixer.c_uac_mixer_unit_get_channels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mixer_build = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.uac_mixer_unit_descriptor = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mixer_build*, %struct.uac_mixer_unit_descriptor*)* @uac_mixer_unit_get_channels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uac_mixer_unit_get_channels(%struct.mixer_build* %0, %struct.uac_mixer_unit_descriptor* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mixer_build*, align 8
  %5 = alloca %struct.uac_mixer_unit_descriptor*, align 8
  %6 = alloca i32, align 4
  store %struct.mixer_build* %0, %struct.mixer_build** %4, align 8
  store %struct.uac_mixer_unit_descriptor* %1, %struct.uac_mixer_unit_descriptor** %5, align 8
  %7 = load %struct.mixer_build*, %struct.mixer_build** %4, align 8
  %8 = getelementptr inbounds %struct.mixer_build, %struct.mixer_build* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %13 [
    i32 130, label %12
    i32 129, label %12
    i32 128, label %29
  ]

12:                                               ; preds = %2, %2
  br label %13

13:                                               ; preds = %2, %12
  %14 = load %struct.uac_mixer_unit_descriptor*, %struct.uac_mixer_unit_descriptor** %5, align 8
  %15 = getelementptr inbounds %struct.uac_mixer_unit_descriptor, %struct.uac_mixer_unit_descriptor* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = sext i32 %16 to i64
  %18 = load %struct.uac_mixer_unit_descriptor*, %struct.uac_mixer_unit_descriptor** %5, align 8
  %19 = getelementptr inbounds %struct.uac_mixer_unit_descriptor, %struct.uac_mixer_unit_descriptor* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = sext i32 %20 to i64
  %22 = add i64 8, %21
  %23 = add i64 %22, 1
  %24 = icmp ult i64 %17, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %36

26:                                               ; preds = %13
  %27 = load %struct.uac_mixer_unit_descriptor*, %struct.uac_mixer_unit_descriptor** %5, align 8
  %28 = call i32 @uac_mixer_unit_bNrChannels(%struct.uac_mixer_unit_descriptor* %27)
  store i32 %28, i32* %6, align 4
  br label %34

29:                                               ; preds = %2
  %30 = load %struct.mixer_build*, %struct.mixer_build** %4, align 8
  %31 = load %struct.uac_mixer_unit_descriptor*, %struct.uac_mixer_unit_descriptor** %5, align 8
  %32 = call i32 @uac3_mixer_unit_wClusterDescrID(%struct.uac_mixer_unit_descriptor* %31)
  %33 = call i32 @get_cluster_channels_v3(%struct.mixer_build* %30, i32 %32)
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %29, %26
  %35 = load i32, i32* %6, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %34, %25
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @uac_mixer_unit_bNrChannels(%struct.uac_mixer_unit_descriptor*) #1

declare dso_local i32 @get_cluster_channels_v3(%struct.mixer_build*, i32) #1

declare dso_local i32 @uac3_mixer_unit_wClusterDescrID(%struct.uac_mixer_unit_descriptor*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
